// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#render shows the link as active when the page matches 1`] = `
<Styled(div)
  aria-current="page"
>
  <Link
    className="css-1t0ocqs test-class"
    to="test-url-1"
  />
</Styled(div)>
`;

exports[`#render shows the link as inactive 1`] = `
<Styled(div)
  aria-current={false}
>
  <Link
    className="css-1t0ocqs test-class"
    to="test-url-1"
  />
</Styled(div)>
`;
